Saving gitignore updates.

--- a/reinforcement-learning-games/zombsole-gym-example/.gitignore
+++ b/reinforcement-learning-games/zombsole-gym-example/.gitignore
@@ -1,5 +1,6 @@
 dqn/log/**
 log*/**
+output/**
 
 .flake8
 Dockerfile
@@ -7,7 +8,6 @@ Makefile
 Pipfile
 alt-diff-out.txt
 alt.diff
-develop.nix
 dqn/Experiments.ipynb
 dqn/MUJOCO_LOG.TXT
 dqn/distribution/
@@ -28,8 +28,4 @@ dqn/train_ch03.py
 dqn/trpo.py
 dqn/value/
 gym_script.py
-output_cnn_3zombies1min.v3.txt
-requirements.txt
 train.nix
-zombsole_train.out
-
